[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]  #release版本中遇到恐慌就直接退出,可以让exe变小
panic = 'abort'

[dependencies]
rand = "0.8.5"
regex = "1.9.5"
nohash-hasher = "0.2.0"  #让HashMap不hash
num = "0.4.1" #用于数值泛型
bit-set = "0.5.3"

# cargo run    编译 + 运行
# cargo build --release
# cargo check  检查确保编译, 不产生可执行文件